# bayaml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  workflow.json
.github/workflows/: docs.yml
baya/: __init__.py  __main__.py  automation.py  automl.py  context.py  leaderboard.py  project.py  simple.py  version.py  visualize.py
baya/assets/: __init__.py  default_config.yaml  default_logging.yaml
baya/cli/: commands.py  main.py
baya/cli/templates/: project_template.py
baya/config/: __init__.py  loader.py  schema.py  validator.py  yaml_support.py
baya/core/: __init__.py  clean.py  data.py  encode.py  evaluate.py  model.py  scale.py  split.py  transform.py
baya/deployment/: __init__.py  docker_generator.py  fastapi_generator.py  production_export.py
baya/documentation/: __init__.py  dataset_profile.py  model_summary.py  pipeline_visualizer.py  project_report.py
baya/exceptions/: __init__.py  config.py  core.py  pipeline.py  plugin.py
baya/export/: __init__.py  csv_exporter.py  docx_exporter.py  excel_exporter.py  graph_exporter.py  image_exporter.py  json_exporter.py  onnx_exporter.py  pdf_exporter.py
baya/governance/: lineage.py
baya/guardrails/: __init__.py  best_practice_enforcer.py  leakage_detector.py  metric_validator.py  schema_guard.py  split_validator.py
baya/hooks/: __init__.py  events.py  manager.py
baya/integrations/: __init__.py  base_backend.py  bootstrap.py  model_registry.py
baya/integrations/pytorch/: __init__.py  pytorch_backend.py
baya/integrations/scipy/: __init__.py  scipy_backend.py
baya/integrations/sklearn/: __init__.py  sklearn_backend.py
baya/integrations/statsmodels/: __init__.py  stats_backend.py
baya/integrations/tensorflow/: __init__.py  tensorflow_backend.py
baya/logging/: __init__.py  formatters.py  handlers.py  logger.py
baya/metrics/: __init__.py  classification.py  clustering.py  registry.py  regression.py
baya/middleware/: __init__.py  base.py  manager.py
baya/monitoring/: __init__.py  alerts.py  drift.py  performance_tracker.py  prediction_distribution.py
baya/optimization/: batching.py  lazy_evaluation.py  parallel_executor.py
baya/orchestration/: __init__.py  dag.py  executor.py  graph_utils.py  pipeline.py  scheduler.py
baya/plugins/: __init__.py  base_plugin.py  loader.py  registry.py
baya/registry/: __init__.py  model_registry.py
baya/reproducibility/: __init__.py  config_freeze.py  dataset_hash.py  environment_capture.py  reproduce.py  run_manifest.py  snapshot.py
baya/state/: cache.py  session.py
baya/tracking/: __init__.py  experiment.py  serializers.py  storage.py  tracker.py
baya/utils/: typing.py
baya/validation/: __init__.py  data_validator.py  schema_validator.py
baya/visualization/: __init__.py  graph_exporter.py  graph_manager.py  matplotlib_backend.py  plotly_backend.py  seaborn_backend.py
baya_runs/tracking/028355ca-172c-4a1f-af2a-6e268bbe6bf3/: run.json
baya_runs/tracking/02ae5875-4930-43ce-b8cf-5fba456c77fd/: run.json
baya_runs/tracking/06d1af7f-6a72-46da-ad8d-2c98357bcae8/: run.json
baya_runs/tracking/07e571f0-9f90-4ccd-b230-8cd7462973d8/: run.json
baya_runs/tracking/12c4d540-31dc-407e-a328-658d2e012c02/: run.json
baya_runs/tracking/14701a5f-2834-410f-b8f1-6fccbd0f3869/: run.json
baya_runs/tracking/1a079e4e-7d95-4dcb-85e1-0122743b0182/: run.json
baya_runs/tracking/1b43e1e7-c305-4da6-ba30-060de2774646/: run.json
baya_runs/tracking/625cdcaa-ab24-4bd6-812b-177ec8e81aba/: run.json
baya_runs/tracking/8e605f37-27fb-4481-94f4-773e55eae977/: run.json
baya_runs/tracking/9a105e38-33d7-4f17-a48a-8596e23d151e/: run.json
bayaml/: __init__.py  automation.py  automl.py  cv.py  hpo.py  leaderboard.py  project.py  simple.py  version.py  visualize.py
bayaml/assets/: __init__.py  default_config.yaml
bayaml/cli/: commands.py  main.py
bayaml/cli/templates/: __init__.py
bayaml/config/: loader.py
bayaml/core/: data.py  encode.py  evaluate.py  split.py  transform.py
bayaml/deployment/: fastapi_generator.py  inference_template.py  production_export.py
bayaml/documentation/: model_summary.py  project_report.py
bayaml/exceptions/: __init__.py  config.py  core.py  pipeline.py  plugin.py
bayaml/export/: csv_exporter.py  docx_exporter.py  excel_exporter.py  pdf_exporter.py
bayaml/governance/: __init__.py  audit.py  compliance.py
bayaml/guardrails/: leakage_detector.py
bayaml/integrations/: __init__.py
bayaml/logging/: handlers.py
bayaml/metrics/: __init__.py  registry.py
bayaml/monitoring/: prediction_distribution.py
bayaml/optimization/: __init__.py  gpu_detection.py
bayaml/orchestration/: __init__.py  dag.py  executor.py  graph_utils.py  pipeline.py
bayaml/plugins/: base_plugin.py  registry.py
bayaml/registry/: artifact_store.py  dataset_registry.py  versioning.py
bayaml/reproducibility/: __init__.py  reproduce.py
bayaml/security/: __init__.py  permissions.py  workspace.py
bayaml/state/: __init__.py  cache.py  session.py  state_manager.py
bayaml/tracking/: tracker.py
bayaml/utils/: __init__.py  hashing.py
bayaml/validation/: data_validator.py  schema_validator.py
bayaml/visualization/: __init__.py  graph_manager.py
deployment_bundle/: README.txt  app.py
details/: config.md  hooks.md  index.md  middleware.md  orchestration.md  plugins.md  quickstart.md  v2_architecture.md
docs/: config.md  hooks.md  index.md  orchestration.md  quickstart.md  v2_architecture.md
docs/source/: api.rst  architecture.rst  automl.rst  automode.rst  cli.rst  conf.py  deployment.rst  index.rst  installation.rst  introduction.rst  output_styles.rst  quickstart.rst
examples/: e2e_train_eval_export.py
tests/: conftest.py  test_all.py  test_automation_engine.py  test_automl.py  test_cli.py  test_core_full_pipeline.py  test_dag_integrity.py  test_export_and_deployment.py  test_from_config.py  test_guardrails.py  test_hooks.py  test_pipeline.py  test_plugins.py  test_project.py  test_registry_integrity.py  test_reproducibility.py  test_simple_api.py  test_tracker.py
(+10 files in other folders)
