[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baya"
version = "0.1.0"
description = "Baya – Modular ML Orchestration Framework for structured machine learning workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Aditya Sarode" }]
keywords = ["machine-learning", "data-science", "mlops", "orchestration", "pipeline", "framework", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.22",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
viz = ["seaborn", "plotly"]
deep = ["tensorflow", "torch"]

[project.urls]
Homepage = "https://baya-ml.dev"
Documentation = "https://baya-ml.dev/docs"
Repository = "https://github.com/adityasarode/baya"
Issues = "https://github.com/adityasarode/baya/issues"





# ================================
# CLI Entry
# ================================



[project.scripts]
baya = "baya.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["baya*"]

[tool.setuptools.package-data]
baya = ["py.typed", "assets/*.yaml"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["baya"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
